Fix align of support logos

--- a/scss/partials/_support.scss
+++ b/scss/partials/_support.scss
@@ -13,11 +13,9 @@
 	li {
 		margin: auto 0;
 		width: 26%;
-		display: flex;
 
 		img {
 			max-width: 100%;
-			margin: auto;
 		}
 	}
 }
